--- a/1.html
+++ b/1.html
@@ -13,6 +13,9 @@
         <li><button class="butn2"></button></li>
         <li><button class="butn3"></button></li>
         <li><button class="butn4">MarginButton</button></li>
+        <li><button class="color"></button></li>
+        <li><button class="si"></button></li>
+        <li><button class="si2"></button></li>
     </ul>
      
 
